--- a/.github/workflows/prcreate.yml
+++ b/.github/workflows/prcreate.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Run multi-gitter
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
         run: |
           multi-gitter run .github/scripts/update-version.sh \
-            --token $GITHUB_TOKEN \
+            --token $GITHUBTOKEN \
             --config .github/config/multi-gitter-config.yaml
