--- a/.github/workflows/prcreate.yml
+++ b/.github/workflows/prcreate.yml
@@ -42,6 +42,6 @@ jobs:
         env:
           GITEA_TOKEN: ${{ secrets.GITEA_TOKEN }}
         run: |
-
+          chmod +x .github/scripts/update-version.sh
           multi-gitter run .github/scripts/update-version.sh --dry-run --token "$GITEA_TOKEN"  --config .github/config/multi-gitter-config   
 
