--- a/.github/workflows/multi-gitter-pr-sync.yml
+++ b/.github/workflows/multi-gitter-pr-sync.yml
@@ -3,12 +3,10 @@ name: Creating PR using Multi-Gitter
 on:
   pull_request:
     types: [opened]
-    branches:
-      - develop
-      - main
 
 jobs:
   update-dependencies:
+    if: github.event.pull_request.base.ref == 'main' || github.event.pull_request.base.ref == 'develop'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
