--- a/.github/workflows/multi-gitter-pr-sync.yml
+++ b/.github/workflows/multi-gitter-pr-sync.yml
@@ -2,8 +2,7 @@ name: Creating PR using Multi-Gitter (Debug Version)
 
 on:
   pull_request:
-    types: [opened]
-  workflow_dispatch:
+    types: [opened, edited]
 
 env:
   ACTIONS_STEP_DEBUG: true
