--- a/.github/workflows/multi-gitter-pr-sync.yml
+++ b/.github/workflows/multi-gitter-pr-sync.yml
@@ -77,8 +77,8 @@ jobs:
           multi-gitter run .github/scripts/update-version.sh \
             --base-branch "$BASE_BRANCH" \
             --branch "$HEAD_BRANCH" \
-            --author-name "$PR_AUTHOR" \
-            --author-email "$PR_AUTHOR_EMAIL" \
+            --author-name "Pawan" \
+            --author-email "pawan@github.com" \
             --pr-title "fix: sync with changes from $HEAD_BRANCH of common-lib" \
             --config .github/config/multi-gitter-config 
             
