--- a/.github/workflows/multi-gitter-pr-sync.yml
+++ b/.github/workflows/multi-gitter-pr-sync.yml
@@ -49,14 +49,14 @@ jobs:
            ssh-keyscan -H github.com >> ~/.ssh/known_hosts
            echo "SSH key file permissions:"
            ls -l ~/.ssh/id_rsa
-           git config --global url."git@github.com:".insteadOf "https://github.com/"
+           git config --global url."ssh://git@github.com/".insteadOf "https://github.com/"
            echo "git-config content:"
            cat ~/.gitconfig
            echo "SSH directory contents:"
            ls -la ~/.ssh
            echo "Testing SSH connection to GitHub:"
            ssh -vvT git@github.com || true
-
+  
       - name: Test repository access
         run: |
           echo "Attempting to clone a test repository:"
@@ -82,6 +82,7 @@ jobs:
             --author-email "pawan@github.com" \
             --pr-title "fix: sync with changes from $HEAD_BRANCH of common-lib" \
             --config .github/config/multi-gitter-config 
+         
             
       - name: Output Git and SSH version info
         run: |
