--- a/.github/workflows/multi-gitter-pr-sync.yml
+++ b/.github/workflows/multi-gitter-pr-sync.yml
@@ -44,11 +44,21 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
            mkdir -p ~/.ssh
+           chmod 700 ~/.ssh
            echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
            chmod 600 ~/.ssh/id_rsa
            ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+           chmod 644 ~/.ssh/known_hosts
            echo "SSH key file permissions:"
            ls -l ~/.ssh/id_rsa
+            cat > ~/.ssh/config << EOF
+            Host github.com
+              User git
+              IdentityFile ~/.ssh/id_rsa
+              StrictHostKeyChecking yes
+            EOF
+           chmod 600 ~/.ssh/config
+           
            git config --global url."ssh://git@github.com/".insteadOf "https://github.com/"
            echo "git-config content:"
            cat ~/.gitconfig
@@ -56,6 +66,13 @@ jobs:
            ls -la ~/.ssh
            echo "Testing SSH connection to GitHub:"
            ssh -vvT git@github.com || true
+
+
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+
   
       - name: Test repository access
         run: |
